--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -1,4 +1,4 @@
 footer.footer
     div.footer_icon
         i.fab.fa-youtube
-    span.footer_text &copy; #{new Date().getFullYear()} Wetube
+    span.footer_text #{siteName} #{new Date().getFullYear()} &copy
