--- a/views/home.pug
+++ b/views/home.pug
@@ -1,4 +1,12 @@
-extends layouts/main.pug
+extends layouts/main
+include mixins/videoBlock
 
-block content
-    p hello
+block content    
+    div.home-videos
+        each item in videos
+            +videoBlock({
+                id: item.id,
+                videoFile:item.videoFile,
+                title:item.title,
+                views:item.views
+            })
