--- a/views/search.pug
+++ b/views/search.pug
@@ -3,7 +3,7 @@ include mixins/videoBlock
 
 block content
     div.searchHeader
-        h3=`Search for ${searchTerm}`
+        h3=`Search for ${term}`
     div.searchVideo
         if videos.length === 0
             h5 No Videos Found
