--- a/views/home.pug
+++ b/views/home.pug
@@ -3,10 +3,10 @@ include mixins/videoBlock
 
 block content    
     div.home-videos
-        each item in videos
+        each video in videos
             +videoBlock({
-                id: item.id,
-                videoFile:item.videoFile,
-                title:item.title,
-                views:item.views
+                id: video.id,
+                fileUrl:video.fileUrl,
+                title:video.title,
+                views:video.views
             })
