--- a/views/mixins/videoBlock.pug
+++ b/views/mixins/videoBlock.pug
@@ -2,10 +2,8 @@
 mixin videoBlock(video={})
     div.videoBlock
         a(href=routes.videoDetail(video.id))
-            video.videoBlock_thumbnail(src=video.videoFile, controls=true)
+            video.videoBlock_thumbnail(src=`/${video.fileUrl}`, controls=true)
             h4.videoBlock_title=video.title
-            if video.views ===0
-                h6.videoBlock_views 0 view
             if video.views ===1
                 h6.videoBlock_views 1 view
             else
