--- a/assets/scss/config/_variables.scss
+++ b/assets/scss/config/_variables.scss
@@ -1,1 +1,7 @@
-$bgColor: purple;
+$red: #ea232c;
+$dark-red: #bb2f2a;
+$grey: #f5f5f5;
+$black: #444444;
+$dark-grey: #e7e7e7;
+$yellow: #f7e600;
+$green: #2db400;
