--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,5 +1,16 @@
 @import "config/_variables.scss";
-
-body {
-  background-color: $bgColor;
-}
+@import "config/reset.scss";
+@import "main.scss";
+@import "partials/header.scss";
+@import "pages/home.scss";
+@import "partials/footer.scss";
+@import "partials/form.scss";
+@import "partials/socialLogin.scss";
+@import "partials/videoBlock.scss";
+@import "pages/home.scss";
+@import "pages/videoDetail.scss";
+@import "pages/userProfile.scss";
+@import "config/utils.scss";
+@import "partials/videoPlayer.scss";
+@import "partials/videoRecorder.scss";
+@import "partials/messages.scss";
