--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -4,6 +4,7 @@ html
         link(rel="stylesheet", href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU", crossorigin="anonymous")
         link(rel="stylesheet", href="/static/styles.css")
         title #{pageTitle} #{siteName}
+        <meta http-equiv="Content-Ssecurity-Policy" content="default-src * 'unsafe-eval' https://ajax.googleapis.com/ 'unsafe-inline'">
     body
         include ../partials/header
         main
