--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -8,7 +8,7 @@ header.header
                 input(type="text", placeholder="Search now", name="term")
         div.header_column
             ul
-                if !user.isAuthenticated
+                if !loggedUser
                     li
                         a(href=routes.join) Join
                     li
